nobase_include_HEADERS = ../include/pon_adapter.h\
			../include/pon_adapter_base.h\
			../include/pon_adapter_config.h\
			../include/pon_adapter_errno.h\
			../include/pon_adapter_debug.h\
			../include/pon_adapter_debug_common.h\
			../include/pon_adapter_mapper.h\
			../include/pon_adapter_crc.h\
			../include/pon_adapter_system.h\
			../include/pon_adapter_event_handlers.h\
			../include/pon_adapter_optic.h\
			../include/omci/pon_adapter_meter.h\
			../include/omci/pon_adapter_mcc.h\
			../include/omci/pon_adapter_mib.h\
			../include/omci/pon_adapter_msg.h\
			../include/omci/pon_adapter_omci.h\
			../include/omci/pon_adapter_standard_me.h\
			../include/omci/pon_adapter_vlan_flow.h\
			../include/omci/me/pon_adapter_ani_g.h\
			../include/omci/me/pon_adapter_call_control_pmhd.h\
			../include/omci/me/pon_adapter_dot1p_mapper.h\
			../include/omci/me/pon_adapter_dot1p_rate_limiter.h\
			../include/omci/me/pon_adapter_dot1x_port_ext_pkg.h\
			../include/omci/me/pon_adapter_energy_consumption_pmhd.h\
			../include/omci/me/pon_adapter_enhanced_security_control.h\
			../include/omci/me/pon_adapter_enhanced_tc_pmhd.h\
			../include/omci/me/pon_adapter_ethernet_pmhd.h\
			../include/omci/me/pon_adapter_ext_vlan.h\
			../include/omci/me/pon_adapter_fec_pmhd.h\
			../include/omci/me/pon_adapter_gal_ethernet_pmhd.h\
			../include/omci/me/pon_adapter_gal_ethernet_profile.h\
			../include/omci/me/pon_adapter_gem_interworking_tp.h\
			../include/omci/me/pon_adapter_gem_port_network_ctp.h\
			../include/omci/me/pon_adapter_gem_port_net_ctp_pmhd.h\
			../include/omci/me/pon_adapter_gem_port_pmhd.h\
			../include/omci/me/pon_adapter_ip_host.h \
			../include/omci/me/pon_adapter_mac_bridge_pmhd.h\
			../include/omci/me/pon_adapter_mac_bridge_port_bridge_table_data.h\
			../include/omci/me/pon_adapter_mac_bridge_port_config_data.h\
			../include/omci/me/pon_adapter_mac_bridge_port_filter_preassign_table.h\
			../include/omci/me/pon_adapter_mac_bridge_port_filter_table_data.h\
			../include/omci/me/pon_adapter_mac_bridge_port_pmhd.h\
			../include/omci/me/pon_adapter_mac_bridge_service_profile.h\
			../include/omci/me/pon_adapter_management_pmhd.h\
			../include/omci/me/pon_adapter_multicast_gem_interworking_tp.h\
			../include/omci/me/pon_adapter_multicast_operations_profile.h\
			../include/omci/me/pon_adapter_olt_g.h\
			../include/omci/me/pon_adapter_onu2_g.h\
			../include/omci/me/pon_adapter_onu_dyn_pwr_mngmt_ctrl.h\
			../include/omci/me/pon_adapter_onu_g.h\
			../include/omci/me/pon_adapter_onu_loop_detection.h\
			../include/omci/me/pon_adapter_onu_remote_debug.h\
			../include/omci/me/pon_adapter_pptp_ethernet_uni.h\
			../include/omci/me/pon_adapter_pptp_lct_uni.h\
			../include/omci/me/pon_adapter_pptp_pots_uni.h\
			../include/omci/me/pon_adapter_pptp_xdsl_uni.h\
			../include/omci/me/pon_adapter_priority_queue.h\
			../include/omci/me/pon_adapter_rtp_pmhd.h\
			../include/omci/me/pon_adapter_sip_agent_config_data.h\
			../include/omci/me/pon_adapter_sip_agent_pmhd.h\
			../include/omci/me/pon_adapter_sip_call_init_pmhd.h\
			../include/omci/me/pon_adapter_sip_user_data.h\
			../include/omci/me/pon_adapter_sw_image.h\
			../include/omci/me/pon_adapter_tcont.h\
			../include/omci/me/pon_adapter_traffic_descriptor.h\
			../include/omci/me/pon_adapter_traffic_scheduler.h\
			../include/omci/me/pon_adapter_uni_g.h\
			../include/omci/me/pon_adapter_virtual_ethernet_interface_point.h\
			../include/omci/me/pon_adapter_vlan_tagging_filter_data.h\
			../include/omci/me/pon_adapter_vlan_tagging_operation_config_data.h\
			../include/omci/me/pon_adapter_voip_line_status.h\
			../include/omci/me/pon_adapter_voip_voice_ctp.h\
			../include/omci/me/pon_adapter_vendor_emop.h\
			../include/omci/me/pon_adapter_twdm_channel_xgem_pmhd.h\
			../include/omci/me/pon_adapter_twdm_channel_ploam_pmhd.h\
			../include/omci/me/pon_adapter_twdm_channel_tuning_pmhd.h\
			../include/omci/me/pon_adapter_twdm_channel_phy_lods_pmhd.h\
			../include/omci/me/pon_adapter_twdm_channel.h\
			../include/omci/me/pon_adapter_twdm_system_profile.h\
			../include/epon/pon_adapter_epon.h\
			../include/epon/pon_adapter_crypt.h\
			../include/epon/pon_adapter_fec.h\
			../include/epon/pon_adapter_mpcp.h\
			../include/epon/pon_adapter_qos.h
